--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,3 +49,34 @@ a {
   padding-left: 12px;
   padding-right: 12px;
 }
+
+.border-container {
+  background-image: linear-gradient(to right, #00e0dd, #000);
+  padding: 3px;
+  border-radius: 10px;
+}
+
+.border-container > a {
+  background-color: white;
+  border-radius: 10px;
+  transition: 0.5s;
+  font-weight: bold;
+}
+
+.border-container > a:hover {
+  background-color: rgb(0, 0, 0, 0);
+  color: white;
+}
+
+.border-container:hover {
+  background-image: linear-gradient(to left, #000, #00e0dd);
+}
+
+.btn-container {
+  margin: 0;
+  padding: 0;
+}
+
+.image-align-text {
+  margin-bottom: 1.77rem;
+}
