--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,3 +80,120 @@ a {
 .image-align-text {
   margin-bottom: 1.77rem;
 }
+
+.eluno-image {
+  background-color: white;
+  max-width: 100px;
+  border-radius: 20px;
+}
+
+.eluno-image-container {
+  background-image: linear-gradient(to left, #00e0dd, #000);
+  padding: 3px;
+  max-width: 100px;
+  border-radius: 20px;
+  margin-bottom: 0.5rem;
+}
+
+.animated-background {
+  background: linear-gradient(-45deg, #000, #e73c7e, #00e0dd, #fff);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+.animation-bubble::before {
+  animation: anim 30s infinite;
+  background-image: radial-gradient(circle at 0 0, hotpink, slateblue);
+  border-radius: 30% 70% 53% 47% / 26% 46% 54% 74%;
+  box-shadow: 0 -2vmin 3vmin LightPink inset, 0 1vmin 4vmin MediumPurple inset,
+    0 -2vmin 7vmin purple inset;
+  content: "";
+  filter: drop-shadow(0 0 3vmin Thistle) drop-shadow(0 5vmin 4vmin Orchid)
+    drop-shadow(2vmin -2vmin 10vmin MediumSlateBlue)
+    drop-shadow(0 0 7vmin #00e0dd);
+  height: 30vmin;
+  width: 30vmin;
+}
+
+.animation-bubble {
+  height: 400px;
+  place-items: center;
+  display: grid;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes anim {
+  0%,
+  100% {
+    border-radius: 30% 70% 70% 30% / 30% 52% 48% 70%;
+    box-shadow: 0 -2vmin 3vmin LightPink inset, 0 1vmin 4vmin MediumPurple inset,
+      0 -2vmin 7vmin purple inset;
+  }
+
+  10% {
+    border-radius: 50% 50% 20% 80% / 25% 80% 20% 75%;
+  }
+
+  20% {
+    border-radius: 67% 33% 47% 53% / 37% 20% 80% 63%;
+  }
+
+  30% {
+    border-radius: 39% 61% 47% 53% / 37% 40% 60% 63%;
+    box-shadow: -1vmin -2vmin 3vmin LightPink inset,
+      -1vmin -2vmin 4vmin MediumPurple inset, 1vmin -1vmin 7vmin purple inset;
+  }
+
+  40% {
+    border-radius: 39% 61% 82% 18% / 74% 40% 60% 26%;
+  }
+
+  50% {
+    border-radius: 100%;
+    box-shadow: 0 2vmin 3vmin LightPink inset, 0 1vmin 4vmin MediumPurple inset,
+      0 2vmin 7vmin purple inset;
+  }
+
+  60% {
+    border-radius: 50% 50% 53% 47% / 72% 69% 31% 28%;
+  }
+
+  70% {
+    border-radius: 50% 50% 53% 47% / 26% 22% 78% 74%;
+    box-shadow: 1vmin 1vmin 4vmin LightPink inset,
+      2vmin -1vmin 4vmin MediumPurple inset, -1vmin -1vmin 5vmin purple inset;
+  }
+
+  80% {
+    border-radius: 50% 50% 53% 47% / 26% 69% 31% 74%;
+  }
+
+  90% {
+    border-radius: 20% 80% 20% 80% / 20% 80% 20% 80%;
+  }
+}
+
+@media (max-width: 878px) {
+  .animation-bubble::before {
+    height: 40vmin;
+    width: 40vmin;
+  }
+}
+
+@media (max-width: 500px) {
+  .animation-bubble::before {
+    height: 55vmin;
+    width: 55vmin;
+  }
+}
