--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,12 @@
 .header {
   padding: 0px 15px;
-  background-color: #fff;
+  background-color: #000;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 .header .nav-item {
-  padding-left: 50px;
+  /* padding-left: 50px; */
 }
 .header .navbar {
   padding: 10px 0px;
