--- a/styles/header.css
+++ b/styles/header.css
@@ -5,9 +5,9 @@
   align-items: flex-end;
   justify-content: flex-end;
 }
-.header .nav-item {
-  /* padding-left: 50px; */
-}
+/* .header .nav-item {
+  padding-left: 50px;
+} */
 .header .navbar {
   padding: 10px 0px;
   line-height: 50px;
