--- a/styles/header.css
+++ b/styles/header.css
@@ -1,13 +1,9 @@
 .header {
   padding: 0px 15px;
-  background-color: #000;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
 }
-/* .header .nav-item {
-  padding-left: 50px;
-} */
+.header .nav-item {
+  padding-left: 25px;
+}
 .header .navbar {
   padding: 10px 0px;
   line-height: 50px;
@@ -25,7 +21,7 @@
   left: 0;
   padding: 10px 15px;
   width: 100%;
-  background: #fff;
+  background: #000;
   box-shadow: 0px 6px 13px 0px rgb(0 0 0 / 6%);
   opacity: 0;
   -webkit-animation: fadeInDown 0.95s ease-in-out 0s 1 normal none running;
