--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,20 @@
+@font-face {
+  font-family: "Avenir";
+  src: local("Avenir"),
+    url(../public/fonts/AvenirLTStd-Roman.otf) format("truetype");
+}
+@font-face {
+  font-family: "UniNeueBold";
+  src: local("UniNeueBold"),
+    url(../public/fonts/UniNeueBold.otf) format("truetype");
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Avenir", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #000;
 }
 
@@ -19,6 +30,7 @@ a {
 .title {
   font-size: 3.9rem;
   margin-bottom: 1rem !important;
+  font-family: "UniNeueBold";
 }
 
 .most-titles {
@@ -238,6 +250,7 @@ a {
 
 .flex-container > h1 {
   font-size: 10em;
+  font-family: "UniNeueBold";
 }
 
 .hero-footer {
@@ -273,6 +286,7 @@ I can't make myself delete this
 .footer {
   padding-top: 2rem;
   padding-bottom: 2rem;
+  font-family: "Avenir";
 }
 
 .not-visible {
