--- a/styles/globals.css
+++ b/styles/globals.css
@@ -369,6 +369,12 @@ a {
   }
 }
 
+@media screen and (max-width: 585px) {
+  .image-container > img {
+    height: 300px !important;
+  }
+}
+
 @media screen and (max-width: 525px) {
   .flex-container > h1 {
     font-size: 5em !important;
@@ -387,7 +393,19 @@ a {
   }
 
   .image-container > img {
-    width: 250px;
+    height: initial !important;
+  }
+
+  .aaron > img {
+    width: 200px;
+  }
+
+  .jonah > img {
+    width: 200px;
+  }
+
+  .anayo > img {
+    width: 200px;
   }
 }
 
