--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,6 @@
     url(../public/fonts/AvenirLTStd-Roman.otf) format("truetype");
 }
 @font-face {
-  font-family: "UniNeueBold";
-  src: local("UniNeueBold"),
-    url(../public/fonts/UniNeueBold.otf) format("truetype");
-}
-@font-face {
   font-family: "Century Gothic Bold";
   src: local("Century Gothic Bold"),
     url(../public/fonts/gothicb.ttf) format("truetype");
@@ -39,7 +34,7 @@ a:hover {
 .title {
   font-size: 3.9rem;
   margin-bottom: 1rem !important;
-  font-family: "UniNeueBold";
+  font-family: "Century Gothic Bold", sans-serif;
 }
 
 .most-titles {
@@ -78,7 +73,6 @@ a:hover {
   padding-left: 12px;
   padding-right: 12px;
   margin-bottom: 6rem;
-  margin-top: 1rem;
 }
 
 .border-container {
@@ -207,13 +201,30 @@ a:hover {
   width: 200px;
 }
 
-.text-container {
+.slide-one {
   display: flex;
   width: 100%;
+}
+
+.slide-two img {
+  width: 100%;
+  align-self: center;
+}
+
+.slide-three {
+  width: 100%;
+  padding-top: 3rem;
+}
+
+.slide-one,
+.slide-two,
+.slide-three {
+  display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 100vh;
+  min-height: 100vh !important;
+  width: 100%;
 }
 
 .item-fadein {
@@ -253,14 +264,6 @@ a:hover {
   color: #00e0dd;
 }
 
-.banner {
-  width: 90vw;
-}
-
-.banner img {
-  width: 100%;
-}
-
 .overlay {
   position: absolute;
   overflow: hidden;
@@ -287,6 +290,7 @@ a:hover {
   text-align: left;
   top: 8px;
   left: 16px;
+  font-family: "Century Gothic Bold", sans-serif;
 }
 
 .new-footer {
@@ -340,7 +344,7 @@ a:hover {
 
 @media screen and (max-width: 1100px) {
   .faq-section {
-    margin-top: 5rem;
+    margin-top: 2rem;
   }
 }
 
