--- a/styles/globals.css
+++ b/styles/globals.css
@@ -175,32 +175,6 @@ a:hover {
   margin: 1rem;
 }
 
-.product-image-container {
-  /* height: 32rem; */
-  display: grid;
-  margin: 0;
-}
-
-.product-image-container img {
-  align-self: center;
-  border-radius: 10px;
-  width: 100%;
-  height: auto;
-  box-shadow: 10px 10px 5px rgb(211, 211, 211, 0.15);
-}
-
-@media screen and (max-width: 1370px) {
-  .image-container > img {
-    align-self: center;
-  }
-}
-
-@media screen and (max-width: 585px) {
-  .image-container > img {
-    height: 300px !important;
-  }
-}
-
 .image-container-no-overflow {
   width: 200px;
   height: 200px;
@@ -236,11 +210,13 @@ a:hover {
 
 .clear-cart-btn {
   position: absolute;
-  right: 100px;
+  font-size: 12px;
+  right: 4%;
+  top: 1.5%;
 }
 
 .product-container {
-  max-width: 45%;
+  max-width: 60%;
   margin: auto;
 }
 
@@ -252,35 +228,69 @@ a:hover {
   color: white;
 }
 
-.nft-container {
-  width: 100%;
+.product-image-container {
+  /* height: 32rem; */
+  display: grid;
+  margin: 0;
+}
+
+.product-image-container img {
+  align-self: center;
+  border-radius: 10px;
+  box-shadow: 10px 10px 5px rgb(211, 211, 211, 0.15);
+}
+
+@media screen and (max-width: 1370px) {
+  .image-container > img {
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .product-container {
+    max-width: 70%;
+  }
+}
+
+@media screen and (max-width: 585px) {
+  .image-container > img {
+    height: 300px !important;
+  }
+  
+  .product-text {
+    font-size: 12px;
+  }
 }
 
 .nft-image-container {
   display: flex;
   align-items: center;
   position: relative;
-  height: 80%;
+  height: 70%;
 }
 
 .nft-card {
   position: relative;
-  max-width: 350px;
-  min-height: 550px;
+  max-width: 300px;
+  max-height: 400px;
+  width: 50%;
   color: white;
   border-radius: 15px;
 }
 
 .nft-card h1 {
-  font-size: 26px;
+  font-size: calc(0.75em + 1vmin);
 }
 
 .nft-card img {
-  width: 100%;
+  position: relative;
+  max-width: 100%;
+  max-height: 100%;
   height: auto;
   border-radius: 15px;
   box-shadow: 10px 10px 5px rgb(211, 211, 211, 0.15);
 }
+
 
 .border-selected {
   border: solid 5px lightblue;
